--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header class="bg-slate-800 text-white p-8 text-center relative">
             <div class="flex justify-center mb-4">
                 <!-- Using the provided logo -->
-                <img src="photo_2025-09-12_18-55-26-removebg-preview.jpg" alt="Company Logo" class="bg-white p-2 rounded-full h-24 w-24 object-contain">
+                <img src="https://lh3.googleusercontent.com/d/1S7J-tmp9-yBlRcL0Tjyq22PfrO7A3NoN" alt="Company Logo" class="bg-white p-2 rounded-full h-24 w-24 object-contain">
             </div>
             <h1 class="text-2xl md:text-3xl font-bold text-white tracking-wide">ประกาศ</h1>
             <p class="text-base md:text-lg text-gray-300 mt-2">เรื่อง การเก็บรวบรวม ใช้ และเปิดเผยข้อมูลส่วนบุคคลสำหรับผู้มาติดต่อ</p>
@@ -126,4 +126,5 @@
 
 </body>
 </html>
+
 
